--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
     <title>Create Task Project</title>
 
 </head>
+
 <body>
 
-    <h1></h1>
-    <script type="module" src="./api.js"></script>
+    <h1 class="title">Exotic Animals</h1>
+
+    <div class="store-front">
+        <button class="btn" id="rodents-btn">Rodents</button> 
+        <button class="btn" id="insects-btn">Insects</button>
+        <button class="btn" id="reptiles-btn">Reptiles</button>
+        <button class="btn" id="birds-btn">Birds</button>
+        <button class="btn" id="amphibians-btn">Amphibians</button>
+        <div id="container" class="container"></div>    
+      </div>
+
+
+
+
+
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
