--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <h1 class="title">Exotic Animals</h1>
+    <h1 class="title">Exotic Pets</h1>
 
     <div class="store-front">
         <button class="btn" id="rodents-btn">Rodents</button> 
@@ -19,7 +19,6 @@
         <button class="btn" id="amphibians-btn">Amphibians</button>
         <div id="container" class="container"></div>    
       </div>
-
 
 
 
