--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <h1 class="title">Exotic Pets</h1>
 
-    <div class="store-front">
+    <div class="pet-front">
         <button class="btn" id="rodents-btn">Rodents</button> 
         <button class="btn" id="insects-btn">Insects</button>
         <button class="btn" id="reptiles-btn">Reptiles</button>
